--- a/front/index.html
+++ b/front/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/JOIAPEDROcopy.png" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/collabflow_logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ApplicationWeb SistemasDistribuidos</title>
   </head>
